--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "axios": "0.17.1",
     "element-ui": "^2.10.0",
-    "js-cookie": "2.2.0",
+    "js-cookie": "^2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "ol": "^5.3.3",
